# slimbot

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  README_zh.md  build.rs
docs/: TODO.md  agent_loop.md  architecture.md  bootstrap.md  channel.md  channels.md  config.md  config_scheme.md  consolidate.md  context.md  index.md  io_scheduler.md  logging.md  memory.md  message_bus.md  path.md  provider.md  runner.md  session.md  snip.md  tool.md  tools.md  utils.md  worker.md
resources/templates/: AGENTS.md  SOUL.md  TOOLS.md  USER.md  dream.md  identity.md
resources/webui/: index.html
src/: agent_loop.rs  bootstrap.rs  cli.rs  commands.rs  config.rs  config_defs.rs  config_macro.rs  config_normalize.rs  config_scheme.rs  consolidate.rs  context.rs  dream.rs  embed.rs  gateway.rs  io_scheduler.rs  lib.rs  log.rs  macros.rs  main.rs  memory.rs  message_bus.rs  path.rs  runner.rs  session.rs  setup.rs  snip.rs  tool.rs  worker.rs
src/channel/: cli.rs  mod.rs  webui.rs
src/cron/: service.rs  types.rs
src/heartbeat/: service.rs
src/provider/: mock.rs  mod.rs  openai.rs
src/tools/: cron.rs  file_editor.rs  file_reader.rs  file_writer.rs  find_files.rs  grep.rs  list_dir.rs  make_dir.rs  (+3 more)
tests/: cli_integration.rs  config_integration.rs  config_scheme_integration.rs  consolidate_integration.rs  context_integration.rs  event_flow_integration.rs  gateway_integration.rs  log_api_integration.rs  log_integration.rs  message_bus_integration.rs  path_integration.rs  session_id_removal_integration.rs  session_integration.rs  tool_integration.rs  utils_integration.rs
(+4 files in other folders)
